fixed the alignment in skills division

--- a/Style.css
+++ b/Style.css
@@ -51,7 +51,7 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 #FrameWorks{
     margin-top: 25;
-    margin-left: 80;
+    margin-left: 40;
     font-size: h3;
     display: block;
 }
